<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Member.Join.JoinCompleteActivity">

    <com.exs.medivelskinmeasure.common.custom_ui.CommonTitleBar
        android:id="@+id/ViewJoinCompleteTitleBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,36:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLJoinCompleteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewJoinCompleteTitleBar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IVJoinCompleteBg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/img_content_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintWidth_percent="0.555555556"
            app:layout_constraintVertical_bias="0.512162162" />


        <TextView
            android:id="@+id/TVJoinCompleteTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17.5dp"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:includeFontPadding="false"
            android:textColor="@color/text_0"
            android:textSize="14sp"
            android:text="@string/str_ko_join_complete_txt_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TVJoinCompleteTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/notosanscjkkr_regular"
            android:includeFontPadding="false"
            android:textColor="@color/text_1"
            android:textSize="14sp"
            android:text="@string/str_ko_join_complete_txt_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVJoinCompleteTxt1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnJoinConpleteConfirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_common_round_button"
            android:enabled="true"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:includeFontPadding="false"
            android:text="@string/str_ko_confirm"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h, 32:5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.971153846"
            app:layout_constraintWidth_percent="0.888888889" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>